# scrt-ias-keys

./: .gitignore  LICENSE.txt  README.md  iaskeys.py  pyproject.toml
src/secretelf/: __init__.py  cli.py  iaskeys.py
tests/: conftest.py  test_cli.py
